src/assets/styles/_tailwind.css
@import "tailwindcss/base";

@layer base {
    html {
        @apply text-body bg-backdrop;
    }

    html.dark {
        @apply text-body-dark bg-backdrop-dark;
    }

    h1, .h1 {
        @apply text-xl;
    }

    h2, .h2 {
        @apply text-lg;
    }

    h3, .h3 {
        @apply text-base font-semibold;
    }
}

@import "tailwindcss/components";
@import "tailwindcss/utilities";

@layer components {
    .btn-primary {
        @apply font-medium select-none items-center px-2.5 py-1.5 border border-transparent rounded shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none text-base tracking-wide;
    }

    .btn-secondary {
        @apply font-medium select-none items-center shadow-sm px-2.5 py-1.5 rounded text-gray-700 bg-white hover:bg-gray-50 border border-gray-300 hover:bg-gray-100 focus:outline-none text-base tracking-wide;
    }

    .btn-danger {
        @apply font-medium select-none items-center justify-center px-2.5 py-1.5 border border-transparent rounded shadow-sm text-white bg-red-600 hover:bg-red-500 focus:outline-none tracking-wide;
    }

    .btn-success {
        @apply font-medium select-none items-center justify-center px-2.5 py-1.5 border border-transparent rounded shadow-sm text-white bg-green-600 hover:bg-green-500 focus:outline-none tracking-wide;
    }

    .btn-link {
        @apply font-medium select-none items-center text-indigo-600 hover:underline hover:text-indigo-700 focus:outline-none text-base tracking-wide;
    }
}

